--- a/quiz-ui/src/assets/main.css
+++ b/quiz-ui/src/assets/main.css
@@ -18,18 +18,22 @@ a,
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
+    
   }
 }
 
 @media (min-width: 1024px) {
   body {
+    background-image : url(training-duo-cordes2.jpg); 
+    background-size: cover;
+    background-position: center;
     display: flex;
-    place-items: center;
+    align-items: center;
   }
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    background-color: rgba(26,28,29, 0.90);
     padding: 0 2rem;
   }
 }
