--- a/quiz-ui/src/assets/main.css
+++ b/quiz-ui/src/assets/main.css
@@ -37,3 +37,51 @@ a,
     padding: 0 2rem;
   }
 }
+
+/* Customize website's scrollbar like Mac OS
+Not supports in Firefox and IE */
+
+/* total width */
+.scrollbar::-webkit-scrollbar {
+  background-color:rgba(255, 255, 255, 0);
+  width:16px
+}
+
+/* background of the scrollbar except button or resizer */
+.scrollbar::-webkit-scrollbar-track {
+  background-color:rgba(255, 255, 255, 0)
+}
+.scrollbar::-webkit-scrollbar-track:hover {
+  background-color:#f4f4f4
+}
+
+/* scrollbar itself */
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color:#babac0;
+  border-radius:16px;
+  /* border:5px solid #fff */
+}
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color:#a0a0a5;
+  /* border:4px solid #f4f4f4 */
+}
+
+/* set button(top and bottom of the scrollbar) */
+.scrollbar::-webkit-scrollbar-button {display:none}
+
+.green_hover::hover {
+  background-color: hsla(160, 100%, 37%, 0.2);
+  cursor: pointer;
+}
+.green_hover{
+  font-style: bold;
+}
+.green_hover:hover {
+  background-color: hsla(160, 89%, 49%, 0.818);
+  cursor: pointer;
+  color: white;
+  /* font-size: 20px; */
+}
+.temp{
+  background-color: rgba(249, 5, 5, 0.402)
+}
