fix: token verification error - Modified checkIsValid to reload the token + fixed error on parsing   date - If token is still valid and the user goes to the admin page (where he   has to log) he will be automatically redirected to the admin page with   all the questions - Add button to delete all questions/participations - Add "go to the previous page" in DetailedQuestion.vue

--- a/quiz-ui/src/assets/main.css
+++ b/quiz-ui/src/assets/main.css
@@ -85,3 +85,13 @@ Not supports in Firefox and IE */
 .temp{
   background-color: rgba(249, 5, 5, 0.402)
 }
+
+nav {
+  padding-top: 0px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  margin-bottom: 20px;
+}
